--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/mainroad"]
 	path = themes/mainroad
-	url = git@github.com:stp2/Mainroad.git
+	url = https://github.com/stp2/Mainroad.git
