add facebook, new tab youtube

--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,7 @@ summaryLength = "50"
     github = "stp2"
     instagram = "horal21.official"
     youtube = "Horalove21"
+    facebook = "skautiteplice"
     
 
 #[[Params.widgets.social.custom]]
